Fix: Remove blue background when on mobile

--- a/static/css/my_styles.css
+++ b/static/css/my_styles.css
@@ -143,7 +143,6 @@ color: #ffffff;
 @media (max-width: 768px) {
   body {
     margin: 0px;
-    background-color: blue;
   }
   .container-md {
     margin: 0px;
